[project]
name = "photoplethysmography"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "torch>=2.7.1",
]
[tool.ruff]
# maximum allowed line length
line-length = 120